cdc-prometheus/Route_grafana.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grafana
spec:
  to:
    kind: Service
    name: grafana-service
    weight: 100
  port:
    targetPort: grafana
  wildcardPolicy: None
