cdc-prometheus/Route_prometheus.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prometheus
spec:
  to:
    kind: Service
    name: prometheus-operated
    weight: 100
  port:
    targetPort: web
  wildcardPolicy: None
